added semantic analyzer along with some changes in parser

--- a/parser/parser/Parser.vcxproj
+++ b/parser/parser/Parser.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ParserRosetta.c" />
+    <ClCompile Include="Parser.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
