--- a/parser/parser/Parser.vcxproj.filters
+++ b/parser/parser/Parser.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ParserRosetta.c">
+    <ClCompile Include="Parser.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
